--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,6 +20,7 @@ body {
 
 * {
     box-sizing: border-box;
+
 }
 li {
     list-style: none;
@@ -102,6 +103,24 @@ p {
         font-weight: 700;
     }
 }
+@media only screen and (max-width: 562px) {
+    .amount-1 {
+        padding-right: 1rem !important;
+        span {
+            &:last-child {
+                font-size: 2rem;
+            }
+        }
+    }
+    .amount-2 {
+        padding-right: 2rem !important;
+        span {
+            &:last-child {
+                font-size: 2rem;
+            }
+        }
+    }
+}
 @media only screen and (max-width: 1599px) {
     html{
         font-size: 9px;
@@ -134,7 +153,7 @@ p {
     position: relative;
     width: 120rem;
     @include responsive{
-        width: 90vmin;
+        width: 95vmin;
     }
 }
 /* width */
@@ -164,3 +183,5 @@ p {
 @import "blocks/share";
 @import "blocks/winners";
 @import "blocks/faq";
+@import "pages/profile";
+@import "pages/registration";
