--- a/resources/sass/blocks/_faq.scss
+++ b/resources/sass/blocks/_faq.scss
@@ -1,7 +1,9 @@
 section#FAQ {
-
+    .container {
+        max-width: 99rem;
+    }
     .description {
-        font-size: 2.7rem;
+        font-size: 2.6rem;
         color: #532f1c;
         font-weight: 700;
         text-align: center;
@@ -22,6 +24,11 @@ section#FAQ {
         display: flex;
         align-items: center;
         gap: 1.5rem;
+        div {
+            display: flex;
+            gap: 2rem;
+            align-items: center;
+        }
         svg {
             transform: rotate(-90deg);
         }
@@ -47,7 +54,6 @@ section#FAQ {
             font-size: 2.2rem;
             font-weight: 700;
             margin-left: 5.4rem;
-
         }
     }
     .form {
@@ -61,10 +67,11 @@ section#FAQ {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin: 0 auto;
+            margin: 0;
             gap: 1.3rem;
+            width: 100%;
             input {
-                width: 28rem;
+                width: 100%;
                 height: 5rem;
                 padding-left: 2rem;
                 border-radius: 1rem;
@@ -111,7 +118,27 @@ section#FAQ {
         }
     }
 }
-
+@media only screen and (max-width: 562px) {
+    section#FAQ {
+        .faq.active .answer {
+            max-height: 60rem !important;
+        }
+        .form {
+            .user {
+                flex-direction: column !important;
+                .input {
+                    width: 100% !important;
+                }
+            }
+            textarea {
+                height: 25rem !important;
+            }
+        }
+    }
+    .question {
+        justify-content: space-between !important;
+    }
+}
 @keyframes fade {
     from {
         opacity: 0;
